# rust-wasm-examples

./: Dockerfile  README.md  build.sh  demo.md  package.json  pnpm-lock.yaml
nodejs/demo/: package.json  tsconfig.vitest-temp.json  vite.config.ts
nodejs/demo/__tests__/: read-function-from-object.test.ts
nodejs/demo/wasm/: read_function_from_object.d.ts  read_function_from_object.js  read_function_from_object_bg.js  read_function_from_object_bg.wasm  read_function_from_object_bg.wasm.d.ts
nodejs/scripts/: index.mjs  package.json
rust/: Cargo.toml
rust/read-function-from-object/: Cargo.toml
rust/read-function-from-object/src/: lib.rs
